# pyside2-tools

./: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  README.md  README.rst  pyside-uic  pyside-uic.in  pyside2-uic  pyuic.py  setup.py
pylupdate/: CMakeLists.txt  fetchtr.cpp  main.cpp  merge.cpp  metatranslator.cpp  metatranslator.h  numberh.cpp  proparser.cpp  proparser.h  pyside-lupdate.1  pyside2-lupdate.1  sametexth.cpp  simtexth.cpp  simtexth.h  translator.cpp  translator.h
pyrcc/: CMakeLists.txt  main.cpp  pyside-rcc.1  pyside2-rcc.1  rcc.cpp  rcc.h
pyside2uic/: __init__.py.in  objcreator.py  pyside2-uic.1  uiparser.py
pyside2uic/Compiler/: qobjectcreator.py
pyside2uic/port_v2/: invoke.py  load_plugin.py  proxy_base.py
pyside2uic/widget-plugins/: qtdeclarative.py  qtwebkit.py
pysideuic/: __init__.py  __init__.py.in  driver.py  exceptions.py  icon_cache.py  objcreator.py  properties.py  uiparser.py
pysideuic/Compiler/: __init__.py  compiler.py  indenter.py  qobjectcreator.py  qtproxies.py
pysideuic/port_v3/: invoke.py  load_plugin.py  proxy_base.py
pysideuic/widget-plugins/: qtwebkit.py
tests/: CMakeLists.txt  qwizard_test.ui
tests/rcc/: CMakeLists.txt  example.qrc  image.qrc  manychars.txt  rcc_image_test.py  rcc_test.py  run_test.sh  shining.txt
